--- a/.linux-tmux.conf
+++ b/.linux-tmux.conf
@@ -4,9 +4,13 @@ unbind C-b
 
 # change split keys
 unbind %
-bind | split-window -v
+bind | split-window -h 
 unbind '"'
-bind - split-window -h
+bind - split-window -v
+
+# load configuration with hotkey
+unbind r
+bind r source-file ~/.tmux.conf; display "Reloaded ~/.tmux.conf"
 
 set -g history-limit 100000
 set -g allow-rename off
@@ -25,6 +29,15 @@ set -g mouse on
 
 set-window-option -g mode-keys vi
 
+# copy paste settings
+bind P paste-buffer
+
+unbind -T copy-mode-vi Space; # unbind default for begin-selection
+unbind -T copy-mode-vi Enter; # unbind default for copy-selection
+
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 
@@ -34,9 +47,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after compu
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 
 set -g @themepack 'powerline/default/cyan' # use this theme for tmux
-
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
