adding my new changes to tmux.conf and .zshrc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,8 @@ bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
 
+bind r source-file ~/.tmux.conf; display "Reloaded ~/.tmux.conf" 
+
 # add hotkey m (maximize, minimize) 
 bind -r m resize-pane -Z
 
@@ -27,8 +29,10 @@ set -g mouse on
 
 set-window-option -g mode-keys vi
 
-bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
-bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode after dragging with mouse
 
