--- a/.linux-tmux.conf
+++ b/.linux-tmux.conf
@@ -41,12 +41,21 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 
+# list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator' # for navigating panes and vim/nvim with Ctrl-hjkl
-set -g @plugin 'jimeh/tmux-themepack' # to configure tmux theme
-set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+# set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
+# set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
+# set -g @continuum-restore 'on' # enable tmux-continuum functionality
+set -g @plugin 'dracula/tmux'
 
-set -g @themepack 'powerline/default/cyan' # use this theme for tmux
+# settings for tmux dracula theme
+set -g @dracula-show-location false
+set -g @dracula-show-timezone false
+# it can accept `session`, `smiley`, `window`, or any character.
+set -g @dracula-show-left-icon session
+# available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, network-ping, attached-clients, network-vpn, weather, time, spotify-tui, kubernetes-context
+set -g @dracula-plugins "cpu-usage ram-usage battery"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
