--- a/.linux-tmux.conf
+++ b/.linux-tmux.conf
@@ -43,17 +43,14 @@ set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator' # for navigating panes and vim/nvim with Ctrl-hjkl
-# set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-# set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
-# set -g @continuum-restore 'on' # enable tmux-continuum functionality
 set -g @plugin 'dracula/tmux'
 
 # settings for tmux dracula theme
 set -g @dracula-show-location false
 set -g @dracula-show-timezone false
 # it can accept `session`, `smiley`, `window`, or any character.
-set -g @dracula-show-left-icon session
+set -g @dracula-show-left-icon "🧛"
 # available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, network-ping, attached-clients, network-vpn, weather, time, spotify-tui, kubernetes-context
 set -g @dracula-plugins "cpu-usage ram-usage battery"
 
