-changing my tmux splits so that they will open the new split in the same directory

--- a/.linux-tmux.conf
+++ b/.linux-tmux.conf
@@ -2,11 +2,13 @@
 set -g prefix C-a
 unbind C-b
 
+unbind C-r
+
 # change split keys
 unbind %
-bind | split-window -h 
+bind | split-window -h -c "#{pane_current_path}"
 unbind '"'
-bind - split-window -v
+bind - split-window -c "#{pane_current_path}"
 
 # load configuration with hotkey
 unbind r
@@ -42,7 +44,6 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
 set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
-set -g @plugin 'christoomey/vim-tmux-navigator' # for navigating panes and vim/nvim with Ctrl-hjkl
 set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
 set -g @plugin 'dracula/tmux'
 
@@ -53,6 +54,9 @@ set -g @dracula-show-timezone false
 set -g @dracula-show-left-icon "🧛"
 # available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, network-ping, attached-clients, network-vpn, weather, time, spotify-tui, kubernetes-context
 set -g @dracula-plugins "cpu-usage ram-usage battery"
+
+set-option -sg escape-time 10
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
