-fix typo in .tmux.con -add vi navigator plugin to .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,6 +55,8 @@ set -g @dracula-show-left-icon "🧛"
 # available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, network-ping, attached-clients, network-vpn, weather, time, spotify-tui, kubernetes-context
 set -g @dracula-plugins "cpu-usage ram-usage battery"
 
+iset -g @plugin 'christoomey/vim-tmux-navigator'
+
 set-option -sg escape-time 10
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
