--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,17 +45,9 @@ set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
 set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
-set -g @plugin 'dracula/tmux'
 
-# settings for tmux dracula theme
-set -g @dracula-show-location false
-set -g @dracula-show-timezone false
-# it can accept `session`, `smiley`, `window`, or any character.
-set -g @dracula-show-left-icon "🧛"
-# available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, network-ping, attached-clients, network-vpn, weather, time, spotify-tui, kubernetes-context
-set -g @dracula-plugins "cpu-usage ram-usage battery"
-
-iset -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin "nordtheme/tmux"
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set-option -sg escape-time 10
 set-option -ga terminal-overrides ",xterm-256color:Tc"
