--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,6 @@
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
 # use C + a prefix instead
 set -g prefix C-a
 unbind C-b
@@ -41,16 +44,17 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
 
 # List of plugins
+# set -g @plugin "nordtheme/tmux"
 set -g @plugin 'tmux-plugins/tpm'
 
-# list of tmux plugins
-set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
-
-set -g @plugin "nordtheme/tmux"
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
+set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+set -g @plugin 'fabioluciano/tmux-tokyo-night'
 
-set-option -sg escape-time 10
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
