--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,6 +51,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 set -g @plugin 'fabioluciano/tmux-tokyo-night'
+set -g @theme_disable_plugins '1'
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
