making changes so that the tmux.conf and .zshrc file work for macOS and Linux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,57 +1,57 @@
 set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
-
-# use C + a prefix instead
-set -g prefix C-a
-unbind C-b
-
-unbind C-r
-
-# change split keys
-unbind %
-bind | split-window -h -c "#{pane_current_path}"
-unbind '"'
-bind - split-window -c "#{pane_current_path}"
-
-# load configuration with hotkey
-unbind r
-bind r source-file ~/.tmux.conf; display "Reloaded ~/.tmux.conf"
-
+set -g terminal-overrides "xterm-256color:Tc"
 set -g history-limit 100000
-set -g allow-rename off
 
-# set keys to resize windows
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 5
-bind -r h resize-pane -L 5
+unbind C-b
+set -g prefix C-a
 
-# add hotkey m (maximize, minimize) 
+unbind %
+bind | split-window -h 
+
+unbind '"'
+bind - split-window -v
+
+unbind r
+bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
+
+bind j resize-pane -D 5
+bind k resize-pane -U 5
+bind l resize-pane -R 5
+bind h resize-pane -L 5
+
 bind -r m resize-pane -Z
 
-# enable the mouse in tmux
 set -g mouse on
 
-set-window-option -g mode-keys vi
-
 # copy paste settings
-bind P paste-buffer
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection 
+# we use xsel for Linux and pbcopy for macOS
+# if-shell '[ "$(uname)" = "Darwin" ]' \
+#   'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"' \
+#   'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"'
 
-unbind -T copy-mode-vi Space; # unbind default for begin-selection
-unbind -T copy-mode-vi Enter; # unbind default for copy-selection
+unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
 
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
+# remove delay for exiting insert mode with ESC in Neovim
+set -sg escape-time 10
 
-# List of plugins
-# set -g @plugin "nordtheme/tmux"
+# tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
 
+# list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
-set -g @plugin 'fabioluciano/tmux-tokyo-night'
-set -g @theme_disable_plugins '1'
+
+if-shell '[ "$(uname)" = "Darwin" ]' {
+  set -g @plugin "fabioluciano/tmux-tokyo-night"
+} 
+#   #set -g @plugin "nordtheme/tmux"
+
+if-shell '[ "$(uname)" = "Linux" ]' {
+  set -g @plugin "fabioluciano/tmux-tokyo-night"
+} 
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
