fixed some minor issues in the tmux.conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,10 +26,12 @@ set -g mouse on
 # copy paste settings
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection 
-# we use xsel for Linux and pbcopy for macOS
-# if-shell '[ "$(uname)" = "Darwin" ]' \
-#   'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"' \
-#   'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"'
+if-shell '[ "$(uname)" = "Darwin" ]' {
+  bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+} 
+if-shell '[ "$(uname)" = "Linux" ]' {
+  bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
+} 
 
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
 
@@ -44,11 +46,10 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 
+# tmux theme plugin
 if-shell '[ "$(uname)" = "Darwin" ]' {
-  set -g @plugin "fabioluciano/tmux-tokyo-night"
+  set -g @plugin "nordtheme/tmux"
 } 
-#   #set -g @plugin "nordtheme/tmux"
-
 if-shell '[ "$(uname)" = "Linux" ]' {
   set -g @plugin "fabioluciano/tmux-tokyo-night"
 } 
