add the line again the hides the plugins for the linux tmux theme'

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -52,6 +52,7 @@ if-shell '[ "$(uname)" = "Darwin" ]' {
 } 
 if-shell '[ "$(uname)" = "Linux" ]' {
   set -g @plugin "fabioluciano/tmux-tokyo-night"
+  set -g @theme_disable_plugins '1'
 } 
 
 set -g @resurrect-capture-pane-contents 'on'
