pulling changes and merging

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,8 +5,7 @@ set -g history-limit 100000
 unbind C-b
 set -g prefix C-a
 
-unbind %
-bind | split-window -h 
+unbind % bind | split-window -h 
 
 unbind '"'
 bind - split-window -v
@@ -26,12 +25,12 @@ set -g mouse on
 # copy paste settings
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection 
+
 if-shell '[ "$(uname)" = "Darwin" ]' {
   bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 } 
 if-shell '[ "$(uname)" = "Linux" ]' {
   bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
-} 
 
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
 
@@ -50,6 +49,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for 
 if-shell '[ "$(uname)" = "Darwin" ]' {
   set -g @plugin "nordtheme/tmux"
 } 
+
 if-shell '[ "$(uname)" = "Linux" ]' {
   set -g @plugin "fabioluciano/tmux-tokyo-night"
   set -g @theme_disable_plugins '1'
