--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,7 +5,8 @@ set -g history-limit 100000
 unbind C-b
 set -g prefix C-a
 
-unbind % bind | split-window -h 
+unbind %
+bind | split-window -h 
 
 unbind '"'
 bind - split-window -v
@@ -31,6 +32,7 @@ if-shell '[ "$(uname)" = "Darwin" ]' {
 } 
 if-shell '[ "$(uname)" = "Linux" ]' {
   bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
+}
 
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
 
@@ -52,9 +54,9 @@ if-shell '[ "$(uname)" = "Darwin" ]' {
 
 if-shell '[ "$(uname)" = "Linux" ]' {
   set -g @plugin "fabioluciano/tmux-tokyo-night"
-  set -g @theme_disable_plugins '1'
 } 
 
+set -g @theme_disable_plugins '1'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
