--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,10 +6,10 @@ unbind C-b
 set -g prefix C-a
 
 unbind %
-bind | split-window -h 
+bind | split-window -h -c "#{pane_current_path}"
 
 unbind '"'
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
 
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
@@ -62,3 +62,9 @@ set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+# Yazi
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+# set -g default-terminal "screen-sixel"
