adding the improvements that I made to the tmux config back to the repo -adds a new theme for tmux -reads the name of the bat command from a variable, since it's different on kali adds the ghostty config to the stow and repo - changes the theme to tokyo night

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,32 +39,39 @@ unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging wi
 # remove delay for exiting insert mode with ESC in Neovim
 set -sg escape-time 10
 
-# tpm plugin
-set -g @plugin 'tmux-plugins/tpm'
-
-# list of tmux plugins
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
-
-# tmux theme plugin
-if-shell '[ "$(uname)" = "Darwin" ]' {
-  set -g @plugin "nordtheme/tmux"
-} 
-
-if-shell '[ "$(uname)" = "Linux" ]' {
-  set -g @plugin "fabioluciano/tmux-tokyo-night"
-} 
-
-set -g @theme_disable_plugins '1'
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
 # Yazi
 set -g allow-passthrough on
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
 # set -g default-terminal "screen-sixel"
+
+# tpm plugin
+set -g @plugin 'tmux-plugins/tpm'
+
+# list of tmux plugins
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# Theme selection
+set -g @powerkit_theme 'tokyo-night'
+set -g @powerkit_theme_variant 'night'
+
+set -g @powerkit_separator 'rounded'
+
+# Auto-detect OS icon
+set -g @powerkit_session_icon 'auto'
+
+# Enable plugins
+set -g @powerkit_plugins ''
+
+# Customize datetime
+set -g @powerkit_plugin_datetime_format 'datetime'
+
+# Kubernetes with namespace
+set -g @powerkit_plugin_kubernetes_show_namespace 'true'
+
+# Load TPM
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'fabioluciano/tmux-powerkit'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
