--- a/eza/.config/eza/theme.yml
+++ b/eza/.config/eza/theme.yml
@@ -1,120 +1,102 @@
-
-rs:
-#  - light icy blue: #E0F7FA
-#  - snow white: #FFFFFF
-#  - sky blue: #B3E5FC
-#  - frosty grey: #90A4AE
-#  - cold dark grey: #607D8B
-#  - icy turquoise: #80DEEA
-#  - frosted red: #FF8A80
-
-colourful: false
+colourful: true
 
 filekinds:
-  normal: {foreground: "#E0F7FA"}
-  directory: {foreground: "#FFFFFF"}
-  symlink: {foreground: "#B3E5FC"}
-  pipe: {foreground: "#90A4AE"}
-  block_device: {foreground: "#B3E5FC"}
-  char_device: {foreground: "#B3E5FC"}
-  socket: {foreground: "#607D8B"}
-  special: {foreground: "#B3E5FC"}
-  executable: {foreground: "#80DEEA"}
-  mount_point: {foreground: "#E0F7FA"}
+  normal: { foreground: "#c0caf5" }
+  directory: { foreground: "#7aa2f7" }
+  symlink: { foreground: "#2ac3de" }
+  pipe: { foreground: "#414868" }
+  block_device: { foreground: "#e0af68" }
+  char_device: { foreground: "#e0af68" }
+  socket: { foreground: "#414868" }
+  special: { foreground: "#9d7cd8" }
+  executable: { foreground: "#9ece6a" }
+  mount_point: { foreground: "#b4f9f8" }
 
 perms:
-  user_read: {foreground: "#FFFFFF"}
-  user_write: {foreground: "#B3E5FC"}
-  user_execute_file: {foreground: "#80DEEA"}
-  user_execute_other: {foreground: "#80DEEA"}
-  group_read: {foreground: "#FFFFFF"}
-  group_write: {foreground: "#B3E5FC"}
-  group_execute: {foreground: "#80DEEA"}
-  other_read: {foreground: "#E0F7FA"}
-  other_write: {foreground: "#B3E5FC"}
-  other_execute: {foreground: "#80DEEA"}
-  special_user_file: {foreground: "#B3E5FC"}
-  special_other: {foreground: "#607D8B"}
-  attribute: {foreground: "#E0F7FA"}
+  user_read: { foreground: "#2ac3de" }
+  user_write: { foreground: "#bb9af7" }
+  user_execute_file: { foreground: "#9ece6a" }
+  user_execute_other: { foreground: "#9ece6a" }
+  group_read: { foreground: "#2ac3de" }
+  group_write: { foreground: "#ff9e64" }
+  group_execute: { foreground: "#9ece6a" }
+  other_read: { foreground: "#2ac3de" }
+  other_write: { foreground: "#ff007c" }
+  other_execute: { foreground: "#9ece6a" }
+  special_user_file: { foreground: "#ff007c" }
+  special_other: { foreground: "#db4b4b" }
+  attribute: { foreground: "#737aa2" }
 
 size:
-  major: {foreground: "#E0F7FA"}
-  minor: {foreground: "#B3E5FC"}
-  number_byte: {foreground: "#FFFFFF"}
-  number_kilo: {foreground: "#E0F7FA"}
-  number_mega: {foreground: "#80DEEA"}
-  number_giga: {foreground: "#B3E5FC"}
-  number_huge: {foreground: "#B3E5FC"}
-  unit_byte: {foreground: "#E0F7FA"}
-  unit_kilo: {foreground: "#80DEEA"}
-  unit_mega: {foreground: "#B3E5FC"}
-  unit_giga: {foreground: "#B3E5FC"}
-  unit_huge: {foreground: "#80DEEA"}
+  major: { foreground: "#2ac3de" }
+  minor: { foreground: "#9d7cd8" }
+  number_byte: { foreground: "#a9b1d6" }
+  number_kilo: { foreground: "#89ddff" }
+  number_mega: { foreground: "#2ac3de" }
+  number_giga: { foreground: "#ff9e64" }
+  number_huge: { foreground: "#ff007c" }
+  unit_byte: { foreground: "#a9b1d6" }
+  unit_kilo: { foreground: "#89ddff" }
+  unit_mega: { foreground: "#2ac3de" }
+  unit_giga: { foreground: "#ff9e64" }
+  unit_huge: { foreground: "#ff007c" }
 
 users:
-  user_you: {foreground: "#FFFFFF"}
-  user_root: {foreground: "#607D8B"}
-  user_other: {foreground: "#B3E5FC"}
-  group_yours: {foreground: "#E0F7FA"}
-  group_other: {foreground: "#607D8B"}
-  group_root: {foreground: "#607D8B"}
+  user_you: { foreground: "#3d59a1" }
+  user_root: { foreground: "#bb9af7" }
+  user_other: { foreground: "#2ac3de" }
+  group_yours: { foreground: "#89ddff" }
+  group_root: { foreground: "#bb9af7" }
+  group_other: { foreground: "#c0caf5" }
 
 links:
-  normal: {foreground: "#B3E5FC"}
-  multi_link_file: {foreground: "#80DEEA"}
+  normal: { foreground: "#89ddff" }
+  multi_link_file: { foreground: "#2ac3de" }
 
 git:
-  new: {foreground: "#E0F7FA"}
-  modified: {foreground: "#B3E5FC"}
-  deleted: {foreground: "#607D8B"}
-  renamed: {foreground: "#80DEEA"}
-  typechange: {foreground: "#B3E5FC"}
-  ignored: {foreground: "#607D8B"}
-  conflicted: {foreground: "#FF8A80"}
+  new: { foreground: "#9ece6a" }
+  modified: { foreground: "#bb9af7" }
+  deleted: { foreground: "#db4b4b" }
+  renamed: { foreground: "#2ac3de" }
+  typechange: { foreground: "#2ac3de" }
+  ignored: { foreground: "#545c7e" }
+  conflicted: { foreground: "#ff9e64" }
 
 git_repo:
-  branch_main: {foreground: "#FFFFFF"}
-  branch_other: {foreground: "#B3E5FC"}
-  git_clean: {foreground: "#80DEEA"}
-  git_dirty: {foreground: "#FF8A80"}
+  branch_main: { foreground: "#737aa2" }
+  branch_other: { foreground: "#b4f9f8" }
+  git_clean: { foreground: "#292e42" }
+  git_dirty: { foreground: "#bb9af7" }
 
 security_context:
-  colon: {foreground: "#80DEEA"}
-  user: {foreground: "#E0F7FA"}
-  role: {foreground: "#B3E5FC"}
-  typ: {foreground: "#607D8B"}
-  range: {foreground: "#B3E5FC"}
+  colon: { foreground: "#545c7e" }
+  user: { foreground: "#737aa2" }
+  role: { foreground: "#2ac3de" }
+  typ: { foreground: "#3d59a1" }
+  range: { foreground: "#9d7cd8" }
 
 file_type:
-  image: {foreground: "#80DEEA"}
-  video: {foreground: "#B3E5FC"}
-  music: {foreground: "#E0F7FA"}
-  lossless: {foreground: "#B3E5FC"}
-  crypto: {foreground: "#607D8B"}
-  document: {foreground: "#FFFFFF"}
-  compressed: {foreground: "#B3E5FC"}
-  temp: {foreground: "#FF8A80"}
-  compiled: {foreground: "#80DEEA"}
-  build: {foreground: "#607D8B"}
-  source: {foreground: "#B3E5FC"}
+  image: { foreground: "#89ddff" }
+  video: { foreground: "#b4f9f8" }
+  music: { foreground: "#73daca" }
+  lossless: { foreground: "#41a6b5" }
+  crypto: { foreground: "#db4b4b" }
+  document: { foreground: "#a9b1d6" }
+  compressed: { foreground: "#ff9e64" }
+  temp: { foreground: "#737aa2" }
+  compiled: { foreground: "#737aa2" }
+  build: { foreground: "#1abc9c" }
+  source: { foreground: "#bb9af7" }
 
-punctuation: {foreground: "#FFFFFF"}
-date: {foreground: "#80DEEA"}
-inode: {foreground: "#E0F7FA"}
-blocks: {foreground: "#607D8B"}
-header: {foreground: "#FFFFFF"}
-octal: {foreground: "#80DEEA"}
-flags: {foreground: "#B3E5FC"}
+punctuation: { foreground: "#414868" }
+date: { foreground: "#e0af68" }
+inode: { foreground: "#737aa2" }
+blocks: { foreground: "#737aa2" }
+header: { foreground: "#a9b1d6" }
+octal: { foreground: "#ff9e64" }
+flags: { foreground: "#9d7cd8" }
 
-symlink_path: {foreground: "#B3E5FC"}
-control_char: {foreground: "#80DEEA"}
-broken_symlink: {foreground: "#FF8A80"}
-broken_path_overlay: {foreground: "#607D8B"}
-
-filenames:
-  # Custom filename-based overrides
-  # Cargo.toml: {icon: {glyph: 🦀}}
-
-extensions:
-  # Custom extension-based overrides
-  # rs: {filename: {foreground: Red}, icon: {glyph: 🦀}}
+symlink_path: { foreground: "#89ddff" }
+control_char: { foreground: "#ff9e64" }
+broken_symlink: { foreground: "#ff007c" }
+broken_path_overlay: { foreground: "#ff007c" }
