--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,4 +1,4 @@
 font-family = JetBrainsMono Nerd Font
 window-padding-y = 0
 window-padding-balance = true
-theme = TokyoNight Night
+theme = tokyonight
