change tmux plugin to catpuccin

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,27 +51,32 @@ set -g @plugin 'tmux-plugins/tpm'
 # list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# Theme selection
-set -g @powerkit_theme 'tokyo-night'
-set -g @powerkit_theme_variant 'night'
+# powerkit theme
+set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'fabioluciano/tmux-powerkit'
+# set -g @powerkit_theme 'tokyo-night'
+# set -g @powerkit_theme_variant 'night'
+# set -g @powerkit_separator 'rounded'
+# set -g @powerkit_session_icon 'auto'
+# set -g @powerkit_plugins ''
+# set -g @powerkit_plugin_datetime_format 'datetime'
+# set -g @powerkit_status_position 'bottom'
+# Make the status line pretty and add some modules
 
-set -g @powerkit_separator 'rounded'
-
-# Auto-detect OS icon
-set -g @powerkit_session_icon 'auto'
-
-# Enable plugins
-set -g @powerkit_plugins ''
-
-# Customize datetime
-set -g @powerkit_plugin_datetime_format 'datetime'
-
-# Kubernetes with namespace
-set -g @powerkit_plugin_kubernetes_show_namespace 'true'
+# Configure the catppuccin plugin
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
 
 # Load TPM
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'fabioluciano/tmux-powerkit'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
