--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,7 +18,6 @@ bind j resize-pane -D 5
 bind k resize-pane -U 5
 bind l resize-pane -R 5
 bind h resize-pane -L 5
-
 bind -r m resize-pane -Z
 
 set -g mouse on
@@ -39,44 +38,23 @@ unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging wi
 # remove delay for exiting insert mode with ESC in Neovim
 set -sg escape-time 10
 
-# Yazi
-set -g allow-passthrough on
-set -ga update-environment TERM
-set -ga update-environment TERM_PROGRAM
-# set -g default-terminal "screen-sixel"
-
 # tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# powerkit theme
-set -g @plugin 'catppuccin/tmux'
-# set -g @plugin 'fabioluciano/tmux-powerkit'
-# set -g @powerkit_theme 'tokyo-night'
-# set -g @powerkit_theme_variant 'night'
-# set -g @powerkit_separator 'rounded'
-# set -g @powerkit_session_icon 'auto'
-# set -g @powerkit_plugins ''
-# set -g @powerkit_plugin_datetime_format 'datetime'
-# set -g @powerkit_status_position 'bottom'
-# Make the status line pretty and add some modules
-
 # Configure the catppuccin plugin
+set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
 set -g status-right-length 100
 set -g status-left-length 100
 set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
-set -agF status-right "#{E:@catppuccin_status_battery}"
-
-# Load TPM
-set -g @plugin 'tmux-plugins/tpm'
+# set -g @catppuccin_window_text " #W"
+# set -g @catppuccin_window_current_text " #W"
+set -g @catppuccin_window_current_text " #{b:pane_current_path}"
+set -g @catppuccin_window_text " #{b:pane_current_path}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
