--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,6 +51,7 @@ set -g @catppuccin_window_status_style "rounded"
 set -g status-right-length 100
 set -g status-left-length 100
 set -g status-left ""
+set -g status-right ""
 # set -g @catppuccin_window_text " #W"
 # set -g @catppuccin_window_current_text " #W"
 set -g @catppuccin_window_current_text " #{b:pane_current_path}"
